--- a/src/main/webapp/Lesson_28_HTML.html
+++ b/src/main/webapp/Lesson_28_HTML.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Lesson_28_HTML</title>
-    <style>
-
-    </style>
 </head>
 <body>
+<h1>Химические элементы</h1>
+<hr>
 <table>
-    <tr><h1>Химические элементы</h1></tr>
-    <hr>
     <tr>
         <td>Номер</td>
         <td>Название</td>
