--- a/src/main/webapp/Lesson_28_HTML.html
+++ b/src/main/webapp/Lesson_28_HTML.html
@@ -3,15 +3,17 @@
 <head>
 </head>
 <body>
-<h1>Химические элементы</h1>
+<table>
+    <th><h2>Химические элементы</h2></th>
+</table>
 <hr>
 <table>
     <tr>
-        <td>Номер</td>
-        <td>Название</td>
-        <td>Символ</td>
-        <td>Год</td>
-        <td>Статья</td>
+        <th>Номер</th>
+        <th>Название</th>
+        <th>Символ</th>
+        <th>Год</th>
+        <th>Статья</th>
     </tr>
     <tr>
         <td>1</td>
