--- a/src/main/webapp/Lesson_28_HTML.html
+++ b/src/main/webapp/Lesson_28_HTML.html
@@ -3,9 +3,7 @@
 <head>
 </head>
 <body>
-<table>
-    <th><h2>Химические элементы</h2></th>
-</table>
+<h2>Химические элементы</h2>
 <hr>
 <table>
     <tr>
