--- a/src/main/webapp/Lesson_28_HTML.html
+++ b/src/main/webapp/Lesson_28_HTML.html
@@ -6,13 +6,14 @@
 <h2>Химические элементы</h2>
 <hr>
 <table>
-    <tr>
+    <thead>
         <th>Номер</th>
         <th>Название</th>
         <th>Символ</th>
         <th>Год</th>
         <th>Статья</th>
-    </tr>
+    </thead>
+    <tbody>
     <tr>
         <td>1</td>
         <td><a href="H2.jpg">Водород</a></td>
@@ -46,6 +47,7 @@
             </a>
         </td>
     </tr>
+    </tbody>
 </table>
 <hr>
 <h4><i>www.itmathrepetitor.ru</i></h4>
